<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5sp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credential_title_alias"
                android:textSize="25sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextAliasUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/credential_hint_alias_update"
                    android:textSize="20sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credential_title_user"
                android:layout_marginTop="15sp"
                android:textSize="25sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextUserUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/credential_hint_user_update"
                    android:textSize="20sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credential_title_password"
                android:layout_marginTop="15sp"
                android:textSize="25sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPasswordUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/credential_hint_password_update"
                    android:inputType="textPassword"
                    android:textSize="20sp"/>
            </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credential_title_application"
                android:layout_weight="1"
                android:textSize="25sp" />
            <Button
                android:layout_weight="9"
                android:id="@+id/buttonChooseAppUpdate"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/baseline_app_registration_24"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupUpdateApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credential_title_tags"
                android:layout_weight="1"
                android:textSize="25sp" />
            <Button
                android:id="@+id/buttonEditChipsUpdate"
                android:layout_width="match_parent"
                android:layout_weight="9"
                android:layout_height="35dp"
                android:background="@drawable/baseline_app_registration_24"
                />
        </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupUpdateChips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credential_title_notes"
                android:layout_marginTop="15sp"
                android:textSize="25sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/black"
                app:counterEnabled="true"
                app:counterMaxLength="200"
                app:endIconMode="clear_text"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/noteTextInputEditTextUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/credential_hint_notes_update"
                    android:inputType="textMultiLine"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>