<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/const_ly_apps"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5sp"
    tools:visibility="visible">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTitleSeparator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineButtonSeparator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineArrowSeparator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15"/>

    <com.google.android.material.textview.MaterialTextView
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/credential_title_newCredential"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTitleSeparator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineArrowSeparator"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/buttonReturn"
        android:layout_width="35sp"
        android:layout_height="35sp"
        android:background="@drawable/outline_arrow_forward_24"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTitleSeparator"
        app:layout_constraintEnd_toStartOf="@+id/guidelineArrowSeparator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?android:attr/actionModeCloseDrawable" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="10sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineButtonSeparator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineTitleSeparator">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credential_title_alias"
                android:textSize="25sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/aliasTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextAlias"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/credential_hint_alias"
                    android:textSize="20sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credential_title_user"
                android:layout_marginTop="15sp"
                android:textSize="25sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextUser"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/credential_hint_user"
                    android:textSize="20sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credential_title_password"
                android:layout_marginTop="15sp"
                android:textSize="25sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/credential_hint_password"
                    android:inputType="textPassword"
                    android:textSize="20sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/credential_title_application"
                    android:layout_weight="1"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/buttonChooseAppCreate"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_weight="9"
                    android:background="@drawable/baseline_app_registration_24" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupCreateApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/credential_title_tags"
                    android:layout_weight="1"
                    android:textSize="25sp" />
                <Button
                    android:id="@+id/buttonEditChipsCreate"
                    android:layout_width="match_parent"
                    android:layout_weight="9"
                    android:layout_height="35dp"
                    android:background="@drawable/baseline_app_registration_24"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupCreateChips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credential_title_notes"
                android:layout_marginTop="15sp"
                android:textSize="25sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/noteTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/black"
                app:counterEnabled="true"
                app:counterMaxLength="200"
                app:endIconMode="clear_text"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/noteTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/credential_hint_notes"
                    android:inputType="textMultiLine"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonSaveNewCredential"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/credential_hint_saveNew"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineButtonSeparator"/>

</androidx.constraintlayout.widget.ConstraintLayout>