<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTitleSeparator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineButtonSeparator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineArrowSeparator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15"/>

    <com.google.android.material.textview.MaterialTextView
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/tag_creation_title"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTitleSeparator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineArrowSeparator"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/buttonReturn"
        android:layout_width="35sp"
        android:layout_height="35sp"
        android:background="@drawable/outline_arrow_forward_24"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTitleSeparator"
        app:layout_constraintEnd_toStartOf="@+id/guidelineArrowSeparator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?android:attr/actionModeCloseDrawable" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="10sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineButtonSeparator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineTitleSeparator">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tag_creation_description"
            android:textSize="15sp" />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10sp"
            android:id="@+id/textInputLayoutTag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/tag_creation__hint_name"
                android:textSize="20sp"/>
        </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonCreateNewTag"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tag_creation_button_desc"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineButtonSeparator"/>
</androidx.constraintlayout.widget.ConstraintLayout>